--- a/iDaBere/app/src/main/res/values/dimens.xml
+++ b/iDaBere/app/src/main/res/values/dimens.xml
@@ -2,4 +2,7 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+
+    <!-- Paragraph title font size -->
+    <dimen name="paragraph_title_size">20dp</dimen>
 </resources>
