--- a/iDaBere/app/src/main/res/layout/activity_search_bar.xml
+++ b/iDaBere/app/src/main/res/layout/activity_search_bar.xml
@@ -11,5 +11,13 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="it.unitn.disi.lpsmt.idabere.SearchBarActivity">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <android.support.v7.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+        </android.support.v7.widget.RecyclerView>
+    </LinearLayout>
 
 </LinearLayout>
