add card layout

--- a/iDaBere/app/src/main/res/values/styles.xml
+++ b/iDaBere/app/src/main/res/values/styles.xml
@@ -6,6 +6,8 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+
+        <item name="menu_list_item_font_syze">@dimens/paragraph_text_size</item>
     </style>
 
 </resources>
