--- a/iDaBere/app/src/main/res/values/dimens.xml
+++ b/iDaBere/app/src/main/res/values/dimens.xml
@@ -3,7 +3,14 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
 
-    <!-- Default paragraph text size -->
+    <!-- Default text size -->
+    <dimen name="title_text_size">25sp</dimen>
     <dimen name="paragraph_text_size">20sp</dimen>
+
+    <!-- Default card size -->
+    <dimen name="card_height_closed">100dp</dimen>
+    <dimen name="card_height_open">300dp</dimen>
+
+
 
 </resources>
