--- a/iDaBere/app/src/main/res/layout/activity_gps_loading.xml
+++ b/iDaBere/app/src/main/res/layout/activity_gps_loading.xml
@@ -1,9 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="it.unitn.disi.lpsmt.idabere.adapters.GpsLoadingActivity">
+    android:gravity="center_horizontal|center_vertical"
+    android:orientation="vertical"
+    tools:context="it.unitn.disi.lpsmt.idabere.GpsLoadingActivity">
 
-</android.support.constraint.ConstraintLayout>
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/activity_horizontal_margin"
+        />
+
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/gps_loading_menu_label"
+        android:textSize="@dimen/title_text_size"
+        android:textStyle="bold" />
+
+
+</LinearLayout>
