--- a/iDaBere/app/src/main/res/values/colors.xml
+++ b/iDaBere/app/src/main/res/values/colors.xml
@@ -8,5 +8,5 @@
     <color name="colorSecondaryDark">#690000</color>
     <color name="colorSecondaryLight">#d7463d</color>
 
-    <color name="colorAccent">#FFFFFF</color>
+    <color name="colorAccent">#9f0215</color>
 </resources>
