--- a/iDaBere/app/src/main/res/values/styles.xml
+++ b/iDaBere/app/src/main/res/values/styles.xml
@@ -12,6 +12,7 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryLight</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:windowNoTitle">true</item>
     </style>
 
 </resources>
