--- a/iDaBere/app/src/main/res/layout/activity_checkout.xml
+++ b/iDaBere/app/src/main/res/layout/activity_checkout.xml
@@ -1,48 +1,119 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+
     tools:context="it.unitn.disi.lpsmt.idabere.CheckoutActivity">
 
-    <FrameLayout
-        android:id="@+id/content"
+
+
+    <TableLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1">
+        android:layout_height="wrap_content"
+        android:duplicateParentState="true"
+        android:padding="@dimen/activity_horizontal_margin">
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/activity_vertical_margin">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="CATEGORIA"
+                android:textSize="@dimen/paragraph_text_size"
+                android:textStyle="bold" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"/>
+
+        <LinearLayout
+            android:id="@+id/main_item_info"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:gravity="center_vertical">
+
+                <TextView
+                    android:id="@+id/main_item_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="DRINK"
+                    android:textSize="@dimen/paragraph_text_size"
+                    android:textStyle="bold"
+                    android:layout_marginRight="@dimen/activity_horizontal_margin"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_margin="@dimen/activity_horizontal_margin"
+                android:gravity="center_vertical|right">
+
+
+                <TextView
+                    android:id="@+id/main_item_total_price"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
+                    android:text="@string/menu_list_item_price"
+                    android:textSize="@dimen/paragraph_text_size" />
+
+                <TextView
+                    android:id="@+id/main_item_total_price_currency"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/menu_list_item_currency"
+                    android:textSize="@dimen/paragraph_text_size" />
+
+
+            </LinearLayout>
+
+
+        </LinearLayout>
+
+    </TableLayout>
+
+
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom"
+        app:layout_scrollFlags="scroll|enterAlways"
+        app:contentInsetLeft="0dp"
+        app:contentInsetStart="0dp">
 
         <TableLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:duplicateParentState="true"
-            android:padding="@dimen/activity_horizontal_margin">
+            >
 
             <TableRow
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="@dimen/activity_vertical_margin">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="CATEGORIA"
-                    android:textSize="@dimen/paragraph_text_size"
-                    android:textStyle="bold" />
-            </TableRow>
-
-            <TableRow
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"/>
+                android:layout_height="wrap_content" />
 
             <LinearLayout
-                android:id="@+id/item_infos_layout"
+                android:id="@+id/delivery_type_row"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:paddingLeft="@dimen/activity_horizontal_margin"
+                android:paddingRight="@dimen/activity_horizontal_margin">
 
 
                 <LinearLayout
@@ -51,13 +122,70 @@
                     android:gravity="center_vertical">
 
                     <TextView
-                        android:id="@+id/info_text"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="DRINK"
+                        android:layout_marginRight="@dimen/activity_horizontal_margin"
+                        android:text="CONSEGNA"
                         android:textSize="@dimen/paragraph_text_size"
-                        android:textStyle="bold"
-                        android:layout_marginRight="@dimen/activity_horizontal_margin"/>
+                        android:textStyle="bold" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_margin="@dimen/activity_horizontal_margin"
+                    android:gravity="center_vertical|right"
+                    >
+
+
+                    <TextView
+                        android:id="@+id/delivery_type_choosen"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+                        android:text="TAVOLO"
+                        android:textSize="@dimen/paragraph_text_size" />
+
+                    <TextView
+                        android:id="@+id/delivery_type_value"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+                        android:text="9"
+                        android:textSize="@dimen/paragraph_text_size" />
+
+
+                </LinearLayout>
+
+
+            </LinearLayout>
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
+
+            <LinearLayout
+                android:id="@+id/item_infos_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:paddingLeft="@dimen/activity_horizontal_margin"
+                android:paddingRight="@dimen/activity_horizontal_margin">
+
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:gravity="center_vertical">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginRight="@dimen/activity_horizontal_margin"
+                        android:text="TOTALE"
+                        android:textSize="@dimen/paragraph_text_size"
+                        android:textStyle="bold" />
 
                 </LinearLayout>
 
@@ -69,7 +197,7 @@
 
 
                     <TextView
-                        android:id="@+id/item_price"
+                        android:id="@+id/total_order_price"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="@dimen/activity_horizontal_margin"
@@ -77,7 +205,7 @@
                         android:textSize="@dimen/paragraph_text_size" />
 
                     <TextView
-                        android:id="@+id/item_price"
+                        android:id="@+id/total_order_price_currency"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/menu_list_item_currency"
@@ -89,144 +217,20 @@
 
             </LinearLayout>
 
+            <TableRow />
+
+            <android.support.design.widget.BottomNavigationView
+                android:id="@+id/navigation"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom"
+                android:background="?android:attr/windowBackground"
+                app:menu="@menu/checkout_bottom_navigation" />
+
         </TableLayout>
 
-        <android.support.v7.widget.Toolbar
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom"
-            >
 
-            <TableLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <TableRow
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
-
-                <LinearLayout
-                    android:id="@+id/item_infos_layout"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+    </android.support.v7.widget.Toolbar>
 
 
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:gravity="center_vertical">
-
-                        <TextView
-                            android:id="@+id/info_text"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="CONSEGNA"
-                            android:textSize="@dimen/paragraph_text_size"
-                            android:textStyle="bold"
-                            android:layout_marginRight="@dimen/activity_horizontal_margin"/>
-
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_margin="@dimen/activity_horizontal_margin"
-                        android:gravity="center_vertical|right">
-
-
-                        <TextView
-                            android:id="@+id/item_price"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="@dimen/activity_horizontal_margin"
-                            android:text="TAVOLO"
-                            android:textSize="@dimen/paragraph_text_size" />
-
-                        <TextView
-                            android:id="@+id/item_price"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="@dimen/activity_horizontal_margin"
-                            android:text="9"
-                            android:textSize="@dimen/paragraph_text_size" />
-
-
-                    </LinearLayout>
-
-
-                </LinearLayout>
-
-                <TableRow
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
-
-                <LinearLayout
-                    android:id="@+id/item_infos_layout"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-
-
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:gravity="center_vertical">
-
-                        <TextView
-                            android:id="@+id/info_text"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="TOTALE"
-                            android:textSize="@dimen/paragraph_text_size"
-                            android:textStyle="bold"
-                            android:layout_marginRight="@dimen/activity_horizontal_margin"/>
-
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_margin="@dimen/activity_horizontal_margin"
-                        android:gravity="center_vertical|right">
-
-
-                        <TextView
-                            android:id="@+id/item_price"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="@dimen/activity_horizontal_margin"
-                            android:text="@string/menu_list_item_price"
-                            android:textSize="@dimen/paragraph_text_size" />
-
-                        <TextView
-                            android:id="@+id/item_price"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="@string/menu_list_item_currency"
-                            android:textSize="@dimen/paragraph_text_size" />
-
-
-                    </LinearLayout>
-
-
-                </LinearLayout>
-
-            </TableLayout>
-
-        </android.support.v7.widget.Toolbar>
-
-    </FrameLayout>
-
-
-
-
-    <android.support.design.widget.BottomNavigationView
-        android:id="@+id/navigation"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
-        android:background="?android:attr/windowBackground"
-        app:menu="@menu/checkout_bottom_navigation" />
-
-</LinearLayout>
+</android.support.design.widget.CoordinatorLayout>
