--- a/iDaBere/app/src/main/res/layout/menu_list_category.xml
+++ b/iDaBere/app/src/main/res/layout/menu_list_category.xml
@@ -11,6 +11,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="@dimen/activity_horizontal_margin"
         android:text="@string/category_name"
+        android:padding="@dimen/activity_horizontal_margin"
         android:textSize="@dimen/title_text_size"
         android:textStyle="bold" />
 </LinearLayout>
