--- a/iDaBere/app/src/main/res/layout/activity_menu.xml
+++ b/iDaBere/app/src/main/res/layout/activity_menu.xml
@@ -13,7 +13,8 @@
             android:id="@+id/categories_expandable_list"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="1">
+            android:layout_weight="1"
+            android:childDivider="@color/expandableListChildDivider">
 
 
         </ExpandableListView>
