--- a/iDaBere/app/src/main/res/layout/activity_review_order.xml
+++ b/iDaBere/app/src/main/res/layout/activity_review_order.xml
@@ -14,7 +14,8 @@
         android:id="@+id/expandable_review_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1">
+        android:layout_weight="1"
+        android:childDivider="@color/expandableListChildDivider">
 
 
     </ExpandableListView>
