add activities package. first DAO interfaces creation

--- a/iDaBere/app/src/main/res/layout/activity_add_toppings.xml
+++ b/iDaBere/app/src/main/res/layout/activity_add_toppings.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:padding="@dimen/activity_horizontal_margin"
     android:gravity="center_horizontal"
-    tools:context="it.unitn.disi.lpsmt.idabere.AddToppingsActivity"
+    tools:context="it.unitn.disi.lpsmt.idabere.activities.AddToppingsActivity"
     android:orientation="vertical">
 
     <!-- Size picker section -->
