--- a/iDaBere/app/src/main/res/layout/activity_delivery_place.xml
+++ b/iDaBere/app/src/main/res/layout/activity_delivery_place.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:gravity="center_horizontal"
     android:orientation="vertical"
-    tools:context="it.unitn.disi.lpsmt.idabere.LoginActivity">
+    tools:context="it.unitn.disi.lpsmt.idabere.activities.LoginActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
