--- a/iDaBere/app/src/main/res/layout/activity_gps_loading.xml
+++ b/iDaBere/app/src/main/res/layout/activity_gps_loading.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:gravity="center_horizontal|center_vertical"
     android:orientation="vertical"
-    tools:context="it.unitn.disi.lpsmt.idabere.GpsLoadingActivity">
+    tools:context="it.unitn.disi.lpsmt.idabere.activities.GpsLoadingActivity">
 
     <ProgressBar
         android:id="@+id/progressBar"
