--- a/iDaBere/app/src/main/res/layout/activity_item_info.xml
+++ b/iDaBere/app/src/main/res/layout/activity_item_info.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:gravity="center_horizontal"
     android:orientation="vertical"
-    tools:context="it.unitn.disi.lpsmt.idabere.ItemInfoActivity">
+    tools:context="it.unitn.disi.lpsmt.idabere.activities.ItemInfoActivity">
 
 
     <ImageView
