--- a/iDaBere/app/src/main/res/layout/activity_login.xml
+++ b/iDaBere/app/src/main/res/layout/activity_login.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="it.unitn.disi.lpsmt.idabere.LoginActivity">
+    tools:context="it.unitn.disi.lpsmt.idabere.activities.LoginActivity">
 
     <!-- Login progress -->
     <ProgressBar
