--- a/iDaBere/app/src/main/res/layout/activity_order_status.xml
+++ b/iDaBere/app/src/main/res/layout/activity_order_status.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:layout_margin="@dimen/activity_horizontal_margin"
-    tools:context="it.unitn.disi.lpsmt.idabere.MenuActivity">
+    tools:context="it.unitn.disi.lpsmt.idabere.activities.MenuActivity">
 
     <TextView
         android:layout_width="wrap_content"
