--- a/iDaBere/app/src/main/res/layout/activity_payment_type.xml
+++ b/iDaBere/app/src/main/res/layout/activity_payment_type.xml
@@ -8,7 +8,7 @@
     android:gravity="center_horizontal"
     android:orientation="vertical"
 
-    tools:context="it.unitn.disi.lpsmt.idabere.LoginActivity">
+    tools:context="it.unitn.disi.lpsmt.idabere.activities.LoginActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
