--- a/iDaBere/app/src/main/res/layout/activity_rate_order.xml
+++ b/iDaBere/app/src/main/res/layout/activity_rate_order.xml
@@ -9,7 +9,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="it.unitn.disi.lpsmt.idabere.LoginActivity">
+    tools:context="it.unitn.disi.lpsmt.idabere.activities.LoginActivity">
 
     <ListView
         android:id="@+id/items_list_view"
