--- a/iDaBere/app/src/main/res/layout/activity_search_bar.xml
+++ b/iDaBere/app/src/main/res/layout/activity_search_bar.xml
@@ -9,7 +9,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="it.unitn.disi.lpsmt.idabere.SearchBarActivity">
+    tools:context="it.unitn.disi.lpsmt.idabere.activities.SearchBarActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
