--- a/iDaBere/app/src/main/res/layout/activity_list_bar.xml
+++ b/iDaBere/app/src/main/res/layout/activity_list_bar.xml
@@ -8,15 +8,32 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin">
 
-    <Button
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="TEST: vai al menu"
-        android:onClick="goToMenuTest"/>
+        android:orientation="vertical"
+        android:id="@+id/loading_indicator"
+        android:visibility="gone">
+
+        <ProgressBar
+            style="?android:attr/progressBarStyle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="@string/gps_loading_menu_label"/>
+
+    </LinearLayout>
+
+
     <ListView
         android:id="@+id/bars_list_view"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="visible">
 
     </ListView>
 
