--- a/iDaBere/app/src/main/res/layout/menu_list_item.xml
+++ b/iDaBere/app/src/main/res/layout/menu_list_item.xml
@@ -90,7 +90,8 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/add_new_drink_button"
-                        style="@style/Widget.AppCompat.Button.Colored"/>
+                        style="@style/Widget.AppCompat.Button.Colored"
+                        android:onClick="addNewChoice"/>
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -106,7 +107,8 @@
                         android:layout_gravity="center"
                         android:layout_height="wrap_content"
                         android:background="@drawable/circle_shape"
-                        card_view:srcCompat="@android:drawable/ic_menu_info_details" />
+                        card_view:srcCompat="@android:drawable/ic_menu_info_details"
+                        android:onClick="openItemInfo"/>
 
 
                 </LinearLayout>
