--- a/iDaBere/app/src/main/res/layout/rate_order_list_item.xml
+++ b/iDaBere/app/src/main/res/layout/rate_order_list_item.xml
@@ -52,9 +52,9 @@
 
         </LinearLayout>
 
-        <!-- Toppings section -->
+        <!-- Choices section -->
         <LinearLayout
-            android:id="@+id/toppings_section_layout"
+            android:id="@+id/choices_section_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
