aggiornamento layout per la add choice

--- a/iDaBere/app/src/main/res/layout/menu_list_item.xml
+++ b/iDaBere/app/src/main/res/layout/menu_list_item.xml
@@ -86,7 +86,7 @@
                     android:orientation="horizontal">
 
                     <Button
-                        android:id="@+id/new_item_button"
+                        android:id="@+id/new_chioce_button"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="@string/add_new_drink_button"
