--- a/iDaBere/app/src/main/res/layout/rate_order_list_item.xml
+++ b/iDaBere/app/src/main/res/layout/rate_order_list_item.xml
@@ -66,7 +66,7 @@
                 android:layout_height="wrap_content" />
 
             <Button
-                android:id="@+id/new_item_button"
+                android:id="@+id/new_chioce_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
