--- a/iDaBere/app/src/main/res/values/colors.xml
+++ b/iDaBere/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    
+
     <color name="colorPrimary">#2C867A</color>
-    <color name="colorPrimaryLight">#A5BFB4</color>
+    <color name="colorPrimaryLight">#a5bfb4</color>
 
     <color name="colorSecondary">#A53543</color>
     <color name="colorSecondaryDark">#702738</color>
