--- a/iDaBere/app/src/main/res/menu/review_order_menu.xml
+++ b/iDaBere/app/src/main/res/menu/review_order_menu.xml
@@ -5,11 +5,11 @@
 
     <item
         android:id="@+id/action_search_bar_icon"
-        android:icon="?android:attr/actionModeWebSearchDrawable"
+        android:icon="@drawable/ic_search_black_24dp"
         android:orderInCategory="0"
         android:title="@string/search_list_item_icon_label"
-        app:showAsAction="always"
-        app:actionViewClass="android.support.v7.widget.SearchView"/>
+        app:actionViewClass="android.support.v7.widget.SearchView"
+        app:showAsAction="always" />
 
 
 </menu>
