--- a/iDaBere/app/src/main/res/drawable/circle_shape.xml
+++ b/iDaBere/app/src/main/res/drawable/circle_shape.xml
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape
     xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/colorPrimary" />
-    <corners android:bottomRightRadius="5dp" android:bottomLeftRadius="5dp" android:topLeftRadius="5dp" android:topRightRadius="5dp" />
-    <padding android:left="2dp" android:top="2dp" android:right="2dp" android:bottom="2dp" />
+    <solid android:color="@color/colorPrimaryLight" />
+    <corners
+        android:bottomRightRadius="15dp"
+        android:bottomLeftRadius="15dp" 
+        android:topLeftRadius="15dp" 
+        android:topRightRadius="15dp" />
+    <!--<padding android:left="2dp" android:top="2dp" android:right="2dp" android:bottom="2dp" />-->
 </shape>
