--- a/iDaBere/app/src/main/res/layout/menu_choice_item.xml
+++ b/iDaBere/app/src/main/res/layout/menu_choice_item.xml
@@ -1,34 +1,98 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     android:visibility="visible"
-    android:padding="15dp">
+    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingBottom="@dimen/activity_vertical_margin">
 
-    <TextView
-        android:id="@+id/choice_description"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:padding="3dp"
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
 
-        android:text="Choice_description" />
+        <!-- Choices list -->
+        <TextView
+            android:id="@+id/choice_description"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_gravity="center_vertical"
+            android:paddingRight="@dimen/activity_horizontal_margin"
+            android:layout_weight="2"
+            android:text="Choicesdescrptiondescrptiondescrptiondescrptiondescrptiondescrptiondescrptiondescrptiondescrption "
+            android:textSize="@dimen/paragraph_text_size" />
 
-    <TextView
-        android:id="@+id/choice_quantity"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:padding="3dp"
-        android:text="1" />
+
+        <!-- Choices right elements -->
+        <!-- The layut containing this elements must have a fixed size -->
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="2">
+
+            <!-- Quantity modifiers -->
+
+            <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal"
+                    android:layout_weight="1">
+
+                 <ImageButton xmlns:card_view="http://schemas.android.com/apk/res-auto"
+                    android:id="@+id/plus_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:background="@color/transparent"
+                    card_view:srcCompat="@drawable/ic_add_circle_black_24dp" />
+
+                    <TextView
+                        android:id="@+id/choice_quantity"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:textSize="@dimen/title_text_size"
+                        android:textStyle="bold"
+                        android:text="10"
+                        android:paddingLeft="@dimen/quantity_number_horizontal_padding"
+                        android:paddingRight="@dimen/quantity_number_horizontal_padding" />
+
+                <ImageButton xmlns:card_view="http://schemas.android.com/apk/res-auto"
+                    android:id="@+id/minus_button"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:background="@color/transparent"
+                    card_view:srcCompat="@drawable/ic_remove_circle_black_24dp" />
+
+                </LinearLayout>
 
 
-    <TextView
-        android:id="@+id/choice_single_price"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:padding="3dp"
 
-        android:text="3€" />
+
+
+            <!-- Price total -->
+
+            <TextView
+                android:id="@+id/choice_single_price"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:textAlignment="center"
+                android:textSize="@dimen/title_text_size"
+                android:textStyle="bold"
+                android:text="3€"
+                android:paddingLeft="@dimen/activity_horizontal_margin"
+                android:layout_weight="1"/>
+
+        </LinearLayout>
+
+
+    </LinearLayout>
+
 
 </LinearLayout>
