--- a/iDaBere/app/src/main/res/values/colors.xml
+++ b/iDaBere/app/src/main/res/values/colors.xml
@@ -6,12 +6,14 @@
     <color name="colorPrimaryLight">#4f7090</color>
 
 
-    <color name="textColor">#FFFFFF</color>
+    <color name="textColor">#000000</color>
 
     <color name="colorSecondary">#9f0215</color>
     <color name="colorSecondaryDark">#690000</color>
     <color name="colorSecondaryLight">#d7463d</color>
     <color name="colorAccent">#9f0215</color>
+
+    <color name="transparent">#0000</color>
 
     <color name="expandableListChildDivider">#00000000</color>
 </resources>
